# allstars-live

./: .firebaserc  .gitignore  BACKLOG.md  DEPLOY.md  HANDOFF.md  MILESTONES.md  Procfile  build.gradle.kts  deploy-rules.bat  firebase.json  index.html  package.json  railway.json  settings.gradle.kts
.claude/: launch.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  README.md  srt_jni.cpp  ts_demuxer.cpp  ts_demuxer.h
app/src/main/java/com/libertyclerk/allstarslive/: AppUi.kt  MainActivity.kt  SettingsScreen.kt
app/src/main/java/com/libertyclerk/allstarslive/gl/: EglCore.kt  GlScene.kt  Mp4Recorder.kt  VideoCompositor.kt
app/src/main/java/com/libertyclerk/allstarslive/ingest/: CameraSettings.kt  CompositorTestScreen.kt  DeviceCamera.kt  MediaCodecVideoDecoder.kt  QrUtil.kt  RtmpReceiver.kt  RtmpReceiverService.kt  RtmpVideoSource.kt  SrtIngestScreen.kt  SrtVideoSource.kt  StubVideoSource.kt  VideoSource.kt
app/src/main/java/com/libertyclerk/allstarslive/net/: NetworkRouter.kt
app/src/main/java/com/libertyclerk/allstarslive/scorer/: GameScorerScreen.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  splash_window.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
reference/web-scoring/: 404.html  DEPLOY.md  auth.js  cloud-data.js  firebase-config.js  firestore.rules  gamecast.html  index.html  manifest.webmanifest  package.json  pitching-plan-test.html  rules-dyb-2026.txt  scoring-controller.html  server.js  setup.html  storage.rules  studio-preview.html  sw.js  viewer.html
reference/web-scoring/_archive/: broadcast-overlay.html  nav-preview.html  viewer.html  watch.html
(+8 files in other folders)
